--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="skip_button_label">Skip!</string>
     <string name="title_activity_location_log">LocationLogActivity</string>
     <string name="colon_separator"> : </string>
+    <string name="date_registered_label">Date Registered</string>
 
     <string name="PREFERENCE_FILE">MyPrefsFile</string>
 </resources>
